--- a/Assets/_Project/UI/BurglaryUI.uxml
+++ b/Assets/_Project/UI/BurglaryUI.uxml
@@ -1,21 +1,27 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/_Project/UI/BurglaryWidow.uss?fileID=7433441132597879392&amp;guid=68485631ac45db842854f3c0dd7bf1dd&amp;type=3#BurglaryWidow" />
     <ui:VisualElement name="Root" style="flex-grow: 1;">
-        <ui:VisualElement name="TimerFiled" style="flex-grow: 1; flex-shrink: 0;">
-            <ui:ProgressBar title="Time" name="Time" focusable="false" tabindex="0" usage-hints="None" low-value="0" style="flex-grow: 1; align-items: stretch; justify-content: space-around; margin-left: 10%; margin-right: 10%; height: auto; font-size: 12px; flex-shrink: 0; scale: 1 1; -unity-background-scale-mode: stretch-to-fill; flex-direction: column; flex-wrap: nowrap; opacity: 1; -unity-font: url(&apos;project://database/Library/unity%20default%20resources?fileID=10102&amp;guid=0000000000000000e000000000000000&amp;type=0#Arial&apos;); -unity-text-outline-width: 0; -unity-slice-left: 0; -unity-slice-top: 0; -unity-slice-right: 0; -unity-slice-bottom: 0; border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0; max-height: none;" />
+        <ui:VisualElement name="Upper" style="flex-direction: row-reverse; align-items: flex-start; justify-content: center; flex-grow: 1;">
+            <ui:VisualElement name="TimerFiled" style="flex-grow: 1; flex-shrink: 0;">
+                <ui:ProgressBar title="Time" name="Time" focusable="false" tabindex="0" usage-hints="None" low-value="0" style="flex-grow: 1; align-items: stretch; justify-content: space-around; margin-left: 10%; margin-right: 10%; height: auto; font-size: 12px; flex-shrink: 0; scale: 1 1; -unity-background-scale-mode: stretch-to-fill; flex-direction: column; flex-wrap: nowrap; opacity: 1; -unity-font: url(&apos;project://database/Library/unity%20default%20resources?fileID=10102&amp;guid=0000000000000000e000000000000000&amp;type=0#Arial&apos;); -unity-text-outline-width: 0; -unity-slice-left: 0; -unity-slice-top: 0; -unity-slice-right: 0; -unity-slice-bottom: 0; border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0; max-height: none;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" style="align-items: stretch; justify-content: flex-start;">
+                <ui:Button text="Меню" display-tooltip-when-elided="true" name="BackToMenu" style="justify-content: flex-start; align-items: flex-end; padding-right: 0; padding-left: 0; margin-left: 15px; margin-top: 15px; margin-right: 0; margin-bottom: 0;" />
+                <ui:Button text="Правила" display-tooltip-when-elided="true" name="Rules" style="justify-content: center; align-items: flex-end; padding-right: 0; padding-left: 0; margin-left: 15px; margin-right: 0; margin-top: 15px; margin-bottom: 0;" />
+            </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="Window" style="flex-grow: 3; flex-direction: row; justify-content: space-around; align-items: center;">
-            <ui:VisualElement>
-                <ui:Label text="Штифт 1" display-tooltip-when-elided="true" name="Pin1" style="flex-direction: row; flex-grow: 1;" />
-                <ui:Label text="0" display-tooltip-when-elided="true" name="Pin1Value" style="flex-direction: row; flex-grow: 1;" />
+            <ui:VisualElement style="background-image: url(&apos;project://database/Assets/_Project/UI/Square.png?fileID=2800000&amp;guid=17a65e034bc2fb540a23ee0cd4a4b5ef&amp;type=3#Square&apos;);">
+                <ui:Label text="Штифт 1" display-tooltip-when-elided="true" name="Pin1label" class="label" style="flex-direction: row; flex-grow: 1;" />
+                <ui:Label text="0" display-tooltip-when-elided="true" name="Pin1Value" class="label" style="flex-direction: row; flex-grow: 1;" />
             </ui:VisualElement>
-            <ui:VisualElement>
-                <ui:Label text="Штифт 1" display-tooltip-when-elided="true" name="Pin2" style="flex-direction: row; flex-grow: 1;" />
-                <ui:Label text="0" display-tooltip-when-elided="true" name="Pin2Value" style="flex-direction: row; flex-grow: 1;" />
+            <ui:VisualElement style="background-image: url(&apos;project://database/Assets/_Project/UI/Square.png?fileID=2800000&amp;guid=17a65e034bc2fb540a23ee0cd4a4b5ef&amp;type=3#Square&apos;);">
+                <ui:Label text="Штифт 2" display-tooltip-when-elided="true" name="Pin2label" class="label" style="flex-direction: row; flex-grow: 1;" />
+                <ui:Label text="0" display-tooltip-when-elided="true" name="Pin2Value" class="label" style="flex-direction: row; flex-grow: 1;" />
             </ui:VisualElement>
-            <ui:VisualElement>
-                <ui:Label text="Штифт 1" display-tooltip-when-elided="true" name="Pin3" style="flex-direction: row; flex-grow: 1;" />
-                <ui:Label text="0" display-tooltip-when-elided="true" name="Pin3Value" style="flex-direction: row; flex-grow: 1;" />
+            <ui:VisualElement style="background-image: url(&apos;project://database/Assets/_Project/UI/Square.png?fileID=2800000&amp;guid=17a65e034bc2fb540a23ee0cd4a4b5ef&amp;type=3#Square&apos;);">
+                <ui:Label text="Штифт 3" display-tooltip-when-elided="true" name="Pin3label" class="label" style="flex-direction: row; flex-grow: 1;" />
+                <ui:Label text="0" display-tooltip-when-elided="true" name="Pin3Value" class="label" style="flex-direction: row; flex-grow: 1;" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="Buttons" style="bottom: auto; flex-grow: 1; flex-direction: row; align-items: center; justify-content: space-around;">
