--- a/Assets/_Project/UI/BurglaryWidow.uss
+++ b/Assets/_Project/UI/BurglaryWidow.uss
@@ -14,6 +14,36 @@
 
 .label {
     width: auto;
-    font-size: 300%;
+    font-size: 500%;
     background-image: none;
+    -unity-text-align: upper-center;
+}
+
+.unity-progress-bar__container {
+    height: auto;
+    opacity: 1;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-around;
+    width: auto;
+    max-height: none;
+    margin-top: 0;
+    scale: 1 1;
+    font-size: 57px;
+}
+
+.unity-progress-bar__background {
+    height: 150px;
+    font-size: 46px;
+}
+
+.pin {
+    background-image: url('project://database/Assets/_Project/UI/Square.png?fileID=2800000&guid=17a65e034bc2fb540a23ee0cd4a4b5ef&type=3#Square');
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+    flex-grow: 1;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
